# advPython_class

./: .gitignore  HowToRepo.txt  pyproject.toml
assignments/: Assignment01.ipynb  Assignment02.ipynb  Assignment03.ipynb  Assignment04.ipynb  Assignment05.ipynb  Assignment06.ipynb  Assignment07.ipynb  Assignment08.ipynb
data/csv/: aare_temperature.csv  names.csv  price_history.csv  spotify_songs.csv  stations.csv
notebooks/: 02_python_basics.ipynb  03_numpy_part_A.ipynb  04_numpy_part_B.ipynb  05_pandas_part_A.ipynb  06_pandas_part_B.ipynb  07_pandas_part_C.ipynb  08_Visualizations.ipynb
